frontend/src/app/features/orders/components/card-orders/card-orders.component.css
button {
  background-color: #545163;
  color: #d4cdc9;
  margin-top: 8px;
  width: 50%;
}

button:hover {
  background-color: rgba(84, 81, 99, 0.3);
}

p {
  text-align: center;
}

.container {
  width: 100%;
  margin: 0 0 50px;
  display: flex;
  justify-content: center;
  background-color: #545163;
}

.card {
  background-color: #d4cdc9;
}

.card-body {
  color: #545163;
  height: auto;
  align-content: center;
  text-align: justify;
}

.card-text {
  font-size: x-small;
  text-align: justify;
}

.order-details {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
  color: #d4cdc9;
  max-width: 20rem;
}

.rating {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-bottom: 5px;
}

.rating img {
  width: 40px;
  height: 40px;
}

#actors {
  font-size: small;
}

#title {
  text-align: center;
}

#stars-outer img {
  cursor: pointer;
}

#opinion {
  /* height: 45%; */
  background-color: #cbb5ac;
}

#opinion-card-body {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#rating-stars {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-bottom: 5px;
}

#rating-stars img {
  width: 40px;
  height: 40px;
}

